# JAMES

./: .gitignore  CMakeLists.txt  README.md  READmE.md  build.sh  pyproject.toml
src/: bindings.cc  encoder.cc  encoder.h  mcts.cc  mcts.h  nn.cc  nn.h  types.cc  types.h
src/mcts_cpp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/python/: export.py  model.py  test.py  train.py
