[build-system]
requires = ["setuptools", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "mcts_cpp"
version = "0.1.0"
description = "Monte carlo tree search algorithm libary"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]
